// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddMember: validate when form has no values 1`] = `
Object {
  "address": "required",
  "enode": "required",
  "username": "required",
}
`;

exports[`AddMember: validate when form has values (with address) 1`] = `
Object {
  "username": "required",
}
`;

exports[`AddMember: validate when form has values (with user) 1`] = `Object {}`;
